[package]
name = "schema2000-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
clap="2.33.3"
schema2000 = { path = "../core" }

[[bin]]
name = "schema2000"
path = "src/main.rs"