[package]
name = "schema2000-cli"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Schema2000 is a tool that parses exsiting JSON documents and tries to derive a JSON schema from these documents."
repository = "https://github.com/rewe-digital/schema2000"
homepage = "https://github.com/rewe-digital/schema2000"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.78"
clap = "2.33.3"
schema2000 = { version = "0.1.0",  path = "../core" }

[[bin]]
name = "schema2000"
path = "src/main.rs"