[package]
name = "schema2000"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Schema2000 is a crate derive a JSON schema from given JSON objects"
repository = "https://github.com/rewe-digital/schema2000"
homepage = "https://github.com/rewe-digital/schema2000"
authors = ["REWE Digital schema2000 maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
serde_json = "1.0.119"
parameterized = "1.0.1"
chrono = "0.4.38"
