[package]
name = "schema2000d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
rdkafka = { version = "0.28.0", features = ["ssl"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
schema2000 = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "schema2000d"
path = "src/main.rs"
